# rapid-niches

./: .gitignore  README.md  main.py  pyproject.toml
notebook/: example.ipynb
rapidniches/: __init__.py  data.py  model.py
