[project]
name = "rapidniches"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "igraph>=1.0.0",
    "ipykernel>=7.1.0",
    "leidenalg>=0.11.0",
    "nflows>=0.14",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scanpy>=1.11.5",
    "torch>=2.9.0",
    "torch-geometric>=2.7.0",
    "tqdm>=4.67.1",
]
